# programming-rust

./: README.md
actix-gcd/: Cargo.toml
actix-gcd/src/: main.rs
array/src/: main.rs
async-programming/: Cargo.toml
chapter1/: README.md
chars/src/: main.rs
cli-basic/: Cargo.toml
cli-basic/src/: main.rs
closure/src/: city.rs  main.rs
enum-pattern/: Cargo.toml
enum-pattern/src/: account.rs  binarytree.rs  enumimple.rs  httpstatus.rs  main.rs  ordering.rs  point.rs  range.rs
fixed-number/: Cargo.toml
fixed-number/src/: main.rs
fork-join/: Cargo.toml
fork-join/locks/src/: main.rs  mutex_lock.rs  thread_lock.rs
fork-join/src/: main.rs  rayon_thread.rs
gcd/src/: main.rs
mandelbrot/: README.md
mandelbrot/src/: main.rs
module/: README.md
module/src/: main.rs  sample.rs
module/src/structures/: consts.rs  mod.rs  stems.rs
overrode/: Cargo.toml
overrode/src/: complex.rs  eq.rs  main.rs  neg.rs
panic/: README.md
panic/src/: main.rs
pointer/src/: main.rs
quickreplace/: Copy.toml  README.md
quickreplace/src/: main.rs
result/: README.md
result/src/: error.rs  main.rs
string-char/: Cargo.toml
string-char/src/: char_u8.rs  iterate.rs  main.rs  pattern.rs  push_insert.rs
strings/: Cargo.toml
strings/src/: main.rs
structure/src/: ascii.rs  autotrait.rs  broom.rs  generics.rs  grayscale.rs  imple.rs  inner.rs  lifetime.rs  main.rs  tuplestruct.rs  vector.rs
tests/src/: lib.rs  module.rs  unused.rs
tuple/src/: main.rs
utility/src/: drop.rs  main.rs
